--- a/Thesis/Latex/Biblio.bib
+++ b/Thesis/Latex/Biblio.bib
@@ -254,13 +254,7 @@
 	publisher = {Cambridge University Press},
 	url       = {https://nlp.stanford.edu/IR-book/}
 }
-@misc{evidentlyai2025,
-	author       = {Evidently AI},
-	title        = {Ranking and Recommendation Metrics Guide: Precision and Recall at K in Ranking and Recommendations},
-	year         = {2025},
-	url          = {https://www.evidentlyai.com/ranking-metrics/precision-recall-at-k},
-	note         = {Last updated: January 9, 2025},
-}
+
 @misc{enwiki:1262179867,
 	author = "{Wikipedia contributors}",
 	title = "Ranking (information retrieval) --- {Wikipedia}{,} The Free Encyclopedia",
@@ -312,10 +306,149 @@
 	doi = "10.18653/v1/W17-3207",
 	pages = "56--60",}
 	
-	@misc{tensorrt_llm_beam_search,
+@misc{tensorrt_llm_beam_search,
 		author = {NVIDIA},
 		title = {Best Practices for Tuning the Performance of {TensorRT-LLM} Beam Search},
 		year = {2023},
 		url = {https://tensorrt-llm.continuumlabs.ai/best-practices-for-tuning-the-performance-of-tensorrt-llm/beam-search},
 		note = {[Accessed:  7-March-2025]}
 	}
+@misc{zheng2024enhancing,
+		author    = {Buqian Zheng},
+		title     = {Enhancing Information Retrieval with Learned Sparse Retrieval},
+		year      = {2024},
+		url       = {https://zilliz.com/learn/enhancing-information-retrieval-learned-sparse-embeddings},
+		note      = {Accessed: 2025-03-09}
+	}
+@article{10.1561/1500000019,
+	author = {Robertson, Stephen and Zaragoza, Hugo},
+	title = {The Probabilistic Relevance Framework: BM25 and Beyond},
+	year = {2009},
+	issue_date = {April 2009},
+	publisher = {Now Publishers Inc.},
+	address = {Hanover, MA, USA},
+	volume = {3},
+	number = {4},
+	issn = {1554-0669},
+	url = {https://doi.org/10.1561/1500000019},
+	doi = {10.1561/1500000019},
+	journal = {Found. Trends Inf. Retr.},
+	month = apr,
+	pages = {333–389},
+	numpages = {57}
+	}
+@misc{gfg2025tfidf,
+	author    = {{GeeksforGeeks}},
+	title     = {Understanding TF-IDF (Term Frequency-Inverse Document Frequency)},
+	year      = {2025},
+	url       = {https://www.geeksforgeeks.org/understanding-tf-idf-term-frequency-inverse-document-frequency/},
+	note      = {Last Updated: 07 Feb, 2025. Accessed: 2025-03-09}
+}
+@inproceedings{10.1007/978-3-030-72240-1_49,
+	author = {Zhuang, Shengyao and Li, Hang and Zuccon, Guido},
+	title = {Deep Query Likelihood Model for Information Retrieval},
+	year = {2021},
+	isbn = {978-3-030-72239-5},
+	publisher = {Springer-Verlag},
+	address = {Berlin, Heidelberg},
+	url = {https://doi.org/10.1007/978-3-030-72240-1_49},
+	doi = {10.1007/978-3-030-72240-1_49},
+	booktitle = {Advances in Information Retrieval: 43rd European Conference on IR Research, ECIR 2021, Virtual Event, March 28 – April 1, 2021, Proceedings, Part II},
+	pages = {463–470},
+	numpages = {8}
+	}
+@inproceedings{chen-etal-2024-dense,
+	title = "Dense {X} Retrieval: What Retrieval Granularity Should We Use?",
+	author = "Chen, Tong  and
+	Wang, Hongwei  and
+	Chen, Sihao  and
+	Yu, Wenhao  and
+	Ma, Kaixin  and
+	Zhao, Xinran  and
+	Zhang, Hongming  and
+	Yu, Dong",
+	editor = "Al-Onaizan, Yaser  and
+	Bansal, Mohit  and
+	Chen, Yun-Nung",
+	booktitle = "Proceedings of the 2024 Conference on Empirical Methods in Natural Language Processing",
+	month = nov,
+	year = "2024",
+	address = "Miami, Florida, USA",
+	publisher = "Association for Computational Linguistics",
+	url = "https://aclanthology.org/2024.emnlp-main.845/",
+	doi = "10.18653/v1/2024.emnlp-main.845",
+	pages = "15159--15177"}
+@misc{ enwiki:1276232158,
+	author = "{Wikipedia contributors}",
+	title = "FAISS --- {Wikipedia}{,} The Free Encyclopedia",
+	year = "2025",
+	url = "https://en.wikipedia.org/w/index.php?title=FAISS&oldid=1276232158",
+	note = "[Online; accessed 9-March-2025]"
+}
+@misc{culpepper2016dynamictradeoffpredictionmultistage,
+	title={Dynamic Trade-Off Prediction in Multi-Stage Retrieval Systems}, 
+	author={J. Shane Culpepper and Charles L. A. Clarke and Jimmy Lin},
+	year={2016},
+	eprint={1610.02502},
+	archivePrefix={arXiv},
+	primaryClass={cs.IR},
+	url={https://arxiv.org/abs/1610.02502}, 
+}
+@InProceedings{10.1007/978-3-319-70145-5_1,
+	author="Wu, Hao
+	and Lu, Kuang
+	and Li, Xiaoming
+	and Fang, Hui",
+	editor="Sung, Won-Kyung
+	and Jung, Hanmin
+	and Xu, Shuo
+	and Chinnasarn, Krisana
+	and Sumiya, Kazutoshi
+	and Lee, Jeonghoon
+	and Dou, Zhicheng
+	and Yang, Grace Hui
+	and Ha, Young-Guk
+	and Lee, Seungbock",
+	title="Improving Retrieval Effectiveness for Temporal-Constrained Top-K Query Processing",
+	booktitle="Information Retrieval Technology",
+	year="2017",
+	publisher="Springer International Publishing",
+	address="Cham",
+	pages="3--15"}
+@misc{zhu2024staykatehybridincontextexample,
+	title={STAYKATE: Hybrid In-Context Example Selection Combining Representativeness Sampling and Retrieval-based Approach -- A Case Study on Science Domains}, 
+	author={Chencheng Zhu and Kazutaka Shimada and Tomoki Taniguchi and Tomoko Ohkuma},
+	year={2024},
+	eprint={2412.20043},
+	archivePrefix={arXiv},
+	primaryClass={cs.CL},
+	url={https://arxiv.org/abs/2412.20043}, 
+}
+@misc{sawarkar2024blendedragimprovingrag,
+	title={Blended RAG: Improving RAG (Retriever-Augmented Generation) Accuracy with Semantic Search and Hybrid Query-Based Retrievers}, 
+	author={Kunal Sawarkar and Abhilasha Mangal and Shivam Raj Solanki},
+	year={2024},
+	eprint={2404.07220},
+	archivePrefix={arXiv},
+	primaryClass={cs.IR},
+	doi={https://doi.org/10.1109/MIPR62202.2024.00031},
+	url={https://arxiv.org/abs/2404.07220}, 
+}
+@inproceedings{zhai2023revisiting,
+	title={Revisiting Neural Retrieval on Accelerators},
+	author={Zhai, Jiaqi and Gong, Zhaojie and Wang, Yueming and Sun, Xiao and Yan, Zheng and Li, Fu and Liu, Xing},
+	booktitle={Proceedings of the 29th ACM SIGKDD Conference on Knowledge Discovery and Data Mining},
+	pages={5520--5531},
+	year={2023},
+	organization={Association for Computing Machinery},
+	address={New York, NY, USA},
+	series={KDD '23}
+}
+@unknown{Ding2024,
+	author = {Ding, Bailu and Zhai, Jiaqi},
+	year = {2024},
+	month = {07},
+	pages = {},
+	title = {Efficient Retrieval with Learned Similarities},
+	doi = {10.48550/arXiv.2407.15462}
+}
