--- a/Paper/latex/sn-bibliography.bib
+++ b/Paper/latex/sn-bibliography.bib
@@ -19,10 +19,10 @@ author = "A. Radford and J. Wu and R. Child and D. Luan and D. Amodei and I. Sut
 }
 
 @inproceedings{Zhang2023,
-	author = "Q. Zhang and S. Chen and D. Xu and Q. Cao and X. Chen and T. Cohn and M. Fang.",
+	author = "Q. Zhang and S. Chen and D. Xu and Q. Cao and X. Chen and T. Cohn and M. Fang",
 	title = "A Survey for Efficient Open Domain Question Answering",
 	booktitle = "Proceedings of the 61st Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)",
-	editor = "Rogers, A., Boyd Graber, J., Okazaki, N.",
+	editor = "A. Rogers and J. Boyd Graber and N. Okazaki",
 	pages = "14447--14465",
 	publisher = "Association for Computational Linguistics",
 	address = "Toronto, Canada",
@@ -30,6 +30,8 @@ author = "A. Radford and J. Wu and R. Child and D. Luan and D. Amodei and I. Sut
 	year = "2023",
 	doi = "10.18653/v1/2023.acl-long.808",
 	url = "https://aclanthology.org/2023.acl-long.808"
+}
+
 }
 @misc{liang2024controllabletextgenerationlarge,
 	title={Controllable Text Generation for Large Language Models: A Survey}, 
@@ -427,18 +429,23 @@ series = {SIGIR '01}
 	month="August 9",
 
 }
+@inproceedings{Tamm_2021,
+	 series={RecSys ’21},
+	title={Quality Metrics in Recommender Systems: Do We Calculate Metrics Consistently?},
+	url={http://dx.doi.org/10.1145/3460231.3478848},
+	DOI={10.1145/3460231.3478848},
+	booktitle={Fifteenth ACM Conference on Recommender Systems},
+	publisher={ACM},
+	author={Tamm, Yan-Martin and Damdinov, Rinchin and Vasilev, Alexey},
+	year={2021},
+	month=sep, pages={708–713},
+	collection={RecSys ’21} }
+@misc{eviden2025mrr,
+	author = "{Evidently AI}",
+	title = "{Mean Reciprocal Rank (MRR) Explained}",
+	year = {2025},
+	url = {https://www.evidentlyai.com/ranking-metrics/mean-reciprocal-rank-mrr},
+	note = "Last accessed: March 13, 2025"
+}
 
-=========================================================================%%
-%% while using chicago reference style, both abbreviated and expanded form of %%
-%% author name format is acceptable. Refer below example for expanded form    %%
-%%============================================================================%%
 
-%%  author		= "{Cameron, Deborah}", - single author
-%%  author		= "{Saito, Yukio} and {Hyuga, Hiroyuki}", - double author 
-
-%%======================================%%
-%% Example for author names with suffix %%
-%%======================================%%
-
-%%  author		= "{Price, R. A. Jr} and {Curry, N. {III}} and McCann, K. E. and 
-%%					Fielding, J. L. and {Abercrombie, E. Jr}",
