--- a/Paper/latex/paper_RAG.tex
+++ b/Paper/latex/paper_RAG.tex
@@ -336,7 +336,8 @@ For both datasets, We utilize the SASRec architecture as our sequential user enc
 The query q represents the user's state at a specific time step, derived from their interaction history. In the MoL (Mixture of Logits) framework, q is transformed into Pq
 embeddings through a multi-layer perceptron (MLP). While our hybrid algorithm does not explicitly employ an MLP for this transformation
 \subsection{Hyperparameter settings.}
-For fair comparison, we maintained consistent architectural choices and training conditions across all experiments , We conducted an extensive hyperparameter analysis comparing both approaches (Hybrid+SAS and MoL+SAS) across different architectural configurations.All experiments were Implemented in TensorFlow and trained on a Google Colab environment with a T4 GPU. We use the Adam optimizer with a learning rate of 0.001. For the hybrid algorithm, we initialize the threshold (Tinit) to 0.3 and adaptively adjust it during training.We discuss detailed hyperparameter settings in  
+For fair comparison, we maintained consistent architectural choices and training conditions across all experiments , We conducted an extensive hyperparameter analysis comparing both approaches (Hybrid+SAS and MoL+SAS) across different architectural configurations.All experiments were Implemented in TensorFlow and trained on a Google Colab environment with a T4 GPU. We use the Adam optimizer with a learning rate of 0.001. For the hybrid algorithm, we initialize the threshold (Tinit) to 0.3 and adaptively adjust it during training.We discuss detailed hyperparameter settings in table \ref{tab:100k_movies} ,table \ref{tab:1m_movies}
+
 
 \setlength{\tabcolsep}{1pt} % Increase column padding
 
@@ -385,17 +386,22 @@ For fair comparison, we maintained consistent architectural choices and training
 	\caption{Results on 1M Movies dataset}
 	\label{tab:1m_movies}
 \end{table}
+\newpage
 Both approaches demonstrate significant performance improvements as model capacity increases, with larger configurations consistently delivering better results. For instance, when increasing the model's capacity such as expanding the (Max Sequence Length: 512, Embedding Dimension: 512, Number of Heads: 4, Feed-Forward Dimension: 512) the hybrid algorithm combined with SASRec (Hybrid+SAS) achieves notable gains, particularly in the most resource-intensive setup. On the ML-100K dataset, Hybrid+SAS reaches a score of\textbf{ 0.8120} compared to the baseline's \textbf{0.8016}, while on ML-1M, it achieves \textbf{0.8350} versus \textbf{0.8276.} The ML-1M dataset generally benefits more from increased capacity, with the performance gap between datasets narrowing as the model scales. While smaller configurations provide a balance of efficiency and performance, the largest configuration, despite its higher computational demands, yields the best results, making it suitable for scenarios where resources are not a constraint. Both approaches show similar benefits from scaling, but Hybrid+SAS maintains a consistent edge in performance.
 \subsection{Evaluation metrics}
 
 We employ standard ranking metrics widely used in sequential recommendation:
 
 \begin{itemize}
-	\item \textbf{Hit Rate at \( k \) (HR@\( k \))}: Measures the proportion of cases where the target item appears in the top-\( k \) recommendations. The HR@\( k \) is computed as:\cite{Tamm_2021}
+	\item \textbf {Hit Rate at \( K \)} (HR@K) evaluates the proportion of users who have at least one relevant item in their top-\( K \) recommendations. It is computed as \cite{eviden2025mrr}:
+	
 	\begin{equation}
-	\text{HR@}k = \frac{1}{|U|} \sum_{u=1}^{|U|} \mathbb{I}(\text{rank}_u \leq k),
-    \end{equation}
-	where \( |U| \) is the number of users, \( \text{rank}_u \) is the rank of the target item for user \( u \), and \( \mathbb{I}(\cdot) \) is the indicator function that returns 1 if the condition is true and 0 otherwise.
+		HR@k = \frac{1}{|U|} \sum_{u \in U} I(|\text{rel}(u) \cap \text{rec}_k(u)| > 0)
+	\end{equation}
+	
+	where \( \text{rel}(u) \) denotes the relevant items for user \( u \), \( \text{rec}_k(u) \) represents the top-\( K \) recommended items, and \( I(\cdot) \) is an indicator function that returns 1 if at least one relevant item is present in the recommendations, otherwise 0.  
+	
+	HR@K can be evaluated at different values of \( K \) (e.g., 3, 5, 10) to assess model performance across various ranking depths.
 	
 	\item \textbf{Mean Reciprocal Rank (MRR)}:is a ranking quality metric that measures how quickly a system retrieves the first relevant item. It is calculated as the average of reciprocal ranks across all users or queries,MRR ranges from 0 to 1, with higher values indicating better performance \cite{eviden2025mrr}.
 	\begin{equation}
@@ -404,7 +410,7 @@ We employ standard ranking metrics widely used in sequential recommendation:
 	where \( \text{rank}_u \) is the position of the first relevant item for user \( u \) within the top-K results. \\ 
 	U represents the total number of users (for recommendation systems) or queries (for information retrieval tasks) in the dataset.
 	
-	\item \textbf{Normalized Discounted Cumulative Gain (NDCG)}: Assesses the ranking quality while accounting for position importance. The NDCG@\( k \) is computed as:\cite{Tamm_2021}
+	\item \textbf{Normalized Discounted Cumulative Gain (NDCG)}: Assesses the ranking quality while accounting for position importance. The NDCG@\( k \) is computed as:\cite{eviden2025mrr}
 	\begin{equation}
 	\text{NDCG@}k = \frac{1}{|U|} \sum_{u=1}^{|U|} \frac{\text{DCG@}k}{\text{IDCG@}k},
      \end{equation}
@@ -420,7 +426,7 @@ Table \ref{tab:results_tab} summarizes the performance of our hybrid algorithm c
 \begin{table}[h]
 	\centering
 		\large
-	\renewcommand{\arraystretch}{1.5}
+	\renewcommand{\arraystretch}{1.3}
 	\begin{tabular}{|l|c|c|c|c|c|c|}
 		\hline
 		\textbf{Model} & \textbf{HR@1} & \textbf{HR@10} & \textbf{HR@50} & \textbf{HR@200} & \textbf{MRR} & \textbf{NDCG} \\ \hline
@@ -434,7 +440,7 @@ Table \ref{tab:results_tab} summarizes the performance of our hybrid algorithm c
 			\caption{Performance Comparison of SASRec+Hybrid and SASRec+MoL on MovieLens 100K and 1M Datasets}
 				\label{tab:results_tab}
 \end{table}
-
+\newpage
 On the ML-100K dataset, our approach shows comparable performance to MoL in terms of \textbf{HR@10 (0.0775 for both)} while achieving better results in\textbf{ MRR (0.0363 vs 0.0285)} and \textbf{NDCG (0.1241 vs 0.1182)}. The hybrid algorithm particularly excels in early position recommendations, as evidenced by the non-zero HR@1 score.
 
 On the larger ML-1M dataset, both approaches show significant improvement in performance compared to ML-100K. Our hybrid algorithm achieves slightly better \textbf{HR@10 (0.1810 vs 0.1799)} \textbf{and HR@200 (0.6159 vs 0.6126)} compared to MoL, while MoL maintains a small edge in other metrics.\\
