--- a/Thesis/Latex/Biblio.bib
+++ b/Thesis/Latex/Biblio.bib
@@ -452,3 +452,86 @@
 	title = {Efficient Retrieval with Learned Similarities},
 	doi = {10.48550/arXiv.2407.15462}
 }
+@article{Roy2022,
+	author    = {Deepjyoti Roy and Mala Dutta},
+	title     = {A systematic review and research perspective on recommender systems},
+	journal   = {Journal of Big Data},
+	volume    = {9},
+	number    = {1},
+	pages     = {59},
+	year      = {2022},
+	date      = {2022/05/03},
+	issn      = {2196-1115},
+	url       = {https://doi.org/10.1186/s40537-022-00592-5},
+	doi       = {10.1186/s40537-022-00592-5},
+	id        = {Roy2022}
+} 
+
+@article{WANG201110831,
+	title = {Application of context-aware and personalized recommendation to implement an adaptive ubiquitous learning system},
+	journal = {Expert Systems with Applications},
+	volume = {38},
+	number = {9},
+	pages = {10831-10838},
+	year = {2011},
+	issn = {0957-4174},
+	doi = {https://doi.org/10.1016/j.eswa.2011.02.083},
+	url = {https://www.sciencedirect.com/science/article/pii/S0957417411002892},
+	author = {Shu-Lin Wang and Chun-Yi Wu},
+
+}
+@ARTICLE{5174476,
+	author={Shin, Choonsung and Woo, Woontack},
+	journal={IEEE Transactions on Consumer Electronics}, 
+	title={Socially aware tv program recommender for multiple viewers}, 
+	year={2009},
+	volume={55},
+	number={2},
+	pages={927-932},
+	doi={10.1109/TCE.2009.5174476}}
+@misc{kang2018selfat,
+		title={Self-Attentive Sequential Recommendation}, 
+		author={Wang-Cheng Kang and Julian McAuley},
+		year={2018},
+		eprint={1808.09781},
+		archivePrefix={arXiv},
+		primaryClass={cs.IR},
+		url={https://arxiv.org/abs/1808.09781}, 
+	}
+	
+@article{Harper2015,
+author    = "F. Maxwell Harper and Joseph A. Konstan",
+title     = "The MovieLens Datasets: History and Context",
+journal   = "ACM Transactions on Interactive Intelligent Systems",
+volume    = "5",
+number    = "4",
+year      = "2015",
+month     = "dec",
+doi       = "10.1145/2827872",
+publisher = "Association for Computing Machinery",
+address   = "New York, NY, USA" }
+@inproceedings{Tamm_2021,
+	series={RecSys ’21},
+	title={Quality Metrics in Recommender Systems: Do We Calculate Metrics Consistently?},
+	url={http://dx.doi.org/10.1145/3460231.3478848},
+	DOI={10.1145/3460231.3478848},
+	booktitle={Fifteenth ACM Conference on Recommender Systems},
+	publisher={ACM},
+	author={Tamm, Yan-Martin and Damdinov, Rinchin and Vasilev, Alexey},
+	year={2021},
+	month=sep, pages={708–713},
+	collection={RecSys ’21} }
+@misc{eviden2025mrr,
+	author = "{Evidently AI}",
+	title = "{Mean Reciprocal Rank (MRR) Explained}",
+	year = {2025},
+	url = {https://www.evidentlyai.com/ranking-metrics/mean-reciprocal-rank-mrr},
+	note = "Last accessed: March 13, 2025"
+}
+@book{zhang2021recsys,
+	author    = {Shuai Zhang and Aston Zhang and Yi Tay},
+	title     = {Recommender Systems},
+	year      = {2021},
+	url       = {https://d2l.ai/chapter_recommender-systems/recsys-intro.html},
+	note      = {Accessed: March 13, 2025}
+}
