--- a/Thesis/Latex/Chapter_3.tex
+++ b/Thesis/Latex/Chapter_3.tex
@@ -1,5 +1,5 @@
 \chapter{RAG (Retrieval-Augmented Generation)}
-\pagestyle{fancy}\lhead{\textbf \footnotesize\it{Enhancing Legal Information Access with Retrieval Augmented LLMs for Juridical Data}}
+\pagestyle{fancy}\lhead{\textbf \footnotesize\it{RAG (Retrieval-Augmented Generation}}
 \pagestyle{fancy}\chead{} \pagestyle{fancy}\rhead{}
 \pagestyle{fancy}\lfoot{\textbf {\small\it{Univ-Mascara/Computer Science: 2025}}} 
 \pagestyle{fancy}\cfoot{} \pagestyle{fancy}\rfoot{\thepage}
