--- a/Thesis/Latex/main.tex
+++ b/Thesis/Latex/main.tex
@@ -129,13 +129,13 @@
 	\newpage
 	\pagenumbering{arabic} 
 	\input{Introduction}
-	\input{Part_1}
+	%\input{Part_1}
 	\input{Chapter_2}
 	\input{Chapter_3} 
 	\input{Chapter_4}
 	%\input{Part_2}
-	%\input{Chapter_5}
-	%\input{Chapter_6}
+    %\input{Chapter_5}
+	\input{Chapter_6}
 	%\input{Chapter_7}
 	%\input{Conclusion}
 	%%%%%%%%%%%%%%%%%%%%% For bibliography %%%%%%%%%%%%%%%%%%
